added the screen size

--- a/02-web-fundamentals/styles.scss
+++ b/02-web-fundamentals/styles.scss
@@ -44,3 +44,9 @@ a {
     justify-content: center;
     align-items: center;
 }
+
+@media screen and (min-width: 768px) {
+	main {
+		width: 300px;
+	}
+}
